fixed button spacing for pomodoro timer, changed colors, and title screen

--- a/mainpagetotal.css
+++ b/mainpagetotal.css
@@ -16,25 +16,28 @@ body {
   
   /* page colors */
   .color-violet {
-    background-color: #7A4EAB;
+    background-color: #b881f8;
   }
   .color-indigo {
-    background-color: #4332CF;
+    background-color: #8f83f8;
   }
   .color-blue {
-    background-color: #2F8FED;
+    background-color: #81befa;
   }
   .color-green {
-    background-color: #4DCF42;
+    background-color: #8bfd81;
   }
   .color-yellow {
-    background-color: #FAEB33;
+    background-color: #fcf17d;
   }
   .color-orange {
-    background-color: #F19031;
+    background-color: #f3b980;
   }
   .color-red {
-    background-color: #F2293A;
+    background-color: #f77d87;
+  }
+  .color-grey {
+    background-color: #dbdbdb;
   }
   
  /* FLASH CARDS*/
@@ -174,45 +177,28 @@ header{background-color: #d8ffd6;}
 
 /* Start Stop and Reset Buttons*/
 .button-1 {
-    border: 0;
+  transition: background-color 0.5s ease-in-out 0s;
+  padding-bottom: 12px;
+  border-radius: 4px;
+  font-size: 24px;
+  font-weight: 300;
+  color: white;
+   background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
     cursor: pointer;
-    background: #FCFCFD;
-    padding: 0 44px;
-    font-size: 18px;
-    border-radius: 3px;
-    color: #36395a;
-    transition:all .5s ease-in-out;
-    height: 50px;
+    overflow: hidden;
+    outline: none;
+
   }
   .button-1:hover {
     background-color: rgba(0, 0, 0, 0.1);
   }
 
-  .button-1{
-    transition:all .2s ease-in-out;
-  }
-
 
 /* Pomodoro Short Break and Long Break buttons*/
   .button-2 {
-    border: 0;
-    color: rgb(255, 255, 255);
-    margin: 0px;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: 600;
-    padding: 2px 12px;
-    height: 28px;
-    cursor: pointer;
-    background: none;
-    box-shadow: none;
-    font-weight: 300;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -20%);
-  }
-  .button-2:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+  font-size: 14px;
   }
 
 /*Timer*/
@@ -247,4 +233,8 @@ header{background-color: #d8ffd6;}
    padding-top: 20%;
    margin: 0 auto;
    align-items: center;
+}
+
+.maintitle {
+  font-size: 72px;
 }
